--- a/config/crd/patches/webhook_in_csibaremetals.yaml
+++ b/config/crd/patches/webhook_in_csibaremetals.yaml
@@ -1,9 +1,9 @@
-# The following patch enables conversion webhook for CRD
+ The following patch enables conversion webhook for CRD
 # CRD conversion requires k8s 1.13 or later.
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: deployments.csi-baremetal.dell.com
+  name: csibaremetals.csi-baremetal.dell.com
 spec:
   conversion:
     strategy: Webhook
