--- a/config/rbac/csibaremetal_viewer_role.yaml
+++ b/config/rbac/csibaremetal_viewer_role.yaml
@@ -1,24 +1,20 @@
-# permissions for end users to edit deployments.
+# permissions for end users to view csibaremetals.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: deployment-editor-role
+  name: csibaremetal-viewer-role
 rules:
 - apiGroups:
   - csi-baremetal.dell.com
   resources:
-  - deployments
+  - csibaremetals
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - csi-baremetal.dell.com
   resources:
-  - deployments/status
+  - csibaremetals/status
   verbs:
   - get
