--- a/config/crd/bases/csi-baremetal.dell.com_deployments.yaml
+++ b/config/crd/bases/csi-baremetal.dell.com_deployments.yaml
@@ -6,23 +6,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.2.2
   creationTimestamp: null
-  name: csibaremetals.csi-baremetal.dell.com
+  name: deployments.csi-baremetal.dell.com
 spec:
   group: csi-baremetal.dell.com
   names:
-    kind: CSIBaremetal
-    listKind: CSIBaremetalList
-    plural: csibaremetals
-    singular: csibaremetal
-    shortNames:
-      - csi
-      - csis
+    kind: Deployment
+    listKind: DeploymentList
+    plural: deployments
+    singular: deployment
   scope: Cluster
   version: v1
   versions:
-  - name: v1
-    served: true
-    storage: true
+    - name: v1
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
