--- a/config/rbac/deployment_viewer_role.yaml
+++ b/config/rbac/deployment_viewer_role.yaml
@@ -1,24 +1,20 @@
-# permissions for end users to edit csibaremetals.
+# permissions for end users to view deployments.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: csibaremetal-editor-role
+  name: deployment-viewer-role
 rules:
 - apiGroups:
   - csi-baremetal.dell.com
   resources:
-  - csibaremetals
+  - deployments
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - csi-baremetal.dell.com
   resources:
-  - csibaremetals/status
+  - deployments/status
   verbs:
   - get
