--- a/config/crd/bases/csi-baremetal.dell.com_deployments.yaml
+++ b/config/crd/bases/csi-baremetal.dell.com_deployments.yaml
@@ -14,40 +14,12 @@ spec:
     listKind: DeploymentList
     plural: deployments
     singular: deployment
-  scope: ""
-  validation:
-    openAPIV3Schema:
-      description: Deployment is the Schema for the deployments API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: DeploymentSpec defines the desired state of Deployment
-          properties:
-            foo:
-              description: Foo is an example field of Deployment. Edit Deployment_types.go
-                to remove/update
-              type: string
-          type: object
-        status:
-          description: DeploymentStatus defines the observed state of Deployment
-          type: object
-      type: object
+  scope: Cluster
   version: v1
   versions:
-  - name: v1
-    served: true
-    storage: true
+    - name: v1
+      served: true
+      storage: true
 status:
   acceptedNames:
     kind: ""
