--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -1,7 +1,104 @@
 apiVersion: csi-baremetal.dell.com/v1
 kind: Deployment
 metadata:
-  name: deployment-sample
+  name: csi
+  namespace: default
+  labels:
+    app.kubernetes.io/name: csi-baremetal
+    app.kubernetes.io/managed-by: csi-baremetal-operator
+    app.kubernetes.io/version: 1.0.0
 spec:
-  # Add fields here
-  foo: bar
+  driver:
+    controller:
+      image:
+        name: csi-baremetal-driver
+        pullPolicy: Always
+        tag: green
+      log:
+        format: text
+        level: info
+      sidecars:
+        - name: csi-provisioner
+          image:
+            name: csi-provisioner
+            pullPolicy: Always
+            tag: v1.6.0
+        - name: csi-attacher
+          image:
+            name: csi-attacher
+            pullPolicy: Always
+            tag: v1.0.1
+        - name: csi-resizer
+          image:
+            name: csi-resizer
+            pullPolicy: Always
+            tag: v1.1.0
+      testEnv: false
+    node:
+      driveMgr:
+        image:
+          name: csi-baremetal-basemgr
+          pullPolicy: Always
+          tag: green
+        endpoint: tcp://localhost:8888
+        deployConfig: false
+        amountOfLoopback: 3
+        sizeOfLoopback: 101Mi
+      image:
+        name: csi-baremetal-node
+        pullPolicy: Always
+        tag: green
+      log:
+        format: text
+        level: info
+      sidecars:
+        - name: csi-node-driver-registrar
+          image:
+            name: csi-node-driver-registrar
+            pullPolicy: Always
+            tag: v1.0.1-gke.0
+      testEnv: false
+    metrics:
+      path: /metrics
+      port: 8787
+    logReceiver:
+      name: fluent-bit
+      image:
+        name: fluent-bit
+        pullPolicy: Always
+        tag: shippable
+    deployAlertsConfig: false
+  scheduler:
+    enable: true
+    image:
+      name: csi-baremetal-scheduler-extender
+      pullPolicy: Always
+      tag: green
+    log:
+      format: text
+      level: info
+    metrics:
+      path: /metrics
+      port: 8787
+    patcher:
+      enable: false
+      manifest: /etc/kubernetes/manifests/kube-scheduler.yaml
+      srcConfigPath: config.yaml
+      srcPolicyPath: policy.yaml
+      targetConfigPath: /etc/kubernetes/scheduler/config.yaml
+      targetPolicyPath: /etc/kubernetes/scheduler/policy.yaml
+      interval: 60
+      restoreOnShutdown: false
+      configMapName: schedulerpatcher-config
+    storageProvisioner: csi-baremetal
+    testEnv: false
+  operator:
+    enable: true
+    image:
+      name: csi-baremetal-operator
+      pullPolicy: Always
+      tag: green
+    log:
+      format: text
+      level: info
+    testEnv: false
