--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -8,12 +8,15 @@ metadata:
     app.kubernetes.io/managed-by: csi-baremetal-operator
     app.kubernetes.io/version: 1.0.0
 spec:
+  globalRegistry: ""
+  nodeSelectors:
+    #key: value
   driver:
     controller:
       image:
-        name: csi-baremetal-driver
-        pullPolicy: Always
-        tag: green
+        name: csi-baremetal-controller
+        pullPolicy: IfNotPresent
+        tag: 0.0.13-375.3c20841
       log:
         format: text
         level: info
@@ -21,33 +24,33 @@ spec:
         - name: csi-provisioner
           image:
             name: csi-provisioner
-            pullPolicy: Always
+            pullPolicy: IfNotPresent
             tag: v1.6.0
         - name: csi-attacher
           image:
             name: csi-attacher
-            pullPolicy: Always
+            pullPolicy: IfNotPresent
             tag: v1.0.1
         - name: csi-resizer
           image:
             name: csi-resizer
-            pullPolicy: Always
+            pullPolicy: IfNotPresent
             tag: v1.1.0
       testEnv: false
     node:
       driveMgr:
         image:
-          name: csi-baremetal-basemgr
-          pullPolicy: Always
-          tag: green
+          name: csi-baremetal-loopbackmgr
+          pullPolicy: IfNotPresent
+          tag: 0.0.13-375.3c20841
         endpoint: tcp://localhost:8888
         deployConfig: false
         amountOfLoopback: 3
         sizeOfLoopback: 101Mi
       image:
         name: csi-baremetal-node
-        pullPolicy: Always
-        tag: green
+        pullPolicy: IfNotPresent
+        tag: 0.0.13-375.3c20841
       log:
         format: text
         level: info
@@ -55,7 +58,7 @@ spec:
         - name: csi-node-driver-registrar
           image:
             name: csi-node-driver-registrar
-            pullPolicy: Always
+            pullPolicy: IfNotPresent
             tag: v1.0.1-gke.0
       testEnv: false
     metrics:
@@ -65,15 +68,15 @@ spec:
       name: fluent-bit
       image:
         name: fluent-bit
-        pullPolicy: Always
+        pullPolicy: IfNotPresent
         tag: shippable
     deployAlertsConfig: false
   scheduler:
     enable: true
     image:
       name: csi-baremetal-scheduler-extender
-      pullPolicy: Always
-      tag: green
+      pullPolicy: IfNotPresent
+      tag: 0.0.13-375.3c20841
     log:
       format: text
       level: info
@@ -82,6 +85,10 @@ spec:
       port: 8787
     patcher:
       enable: false
+      image:
+        name: csi-baremetal-scheduler-patcher
+        pullPolicy: IfNotPresent
+        tag: 0.0.13-375.3c20841
       manifest: /etc/kubernetes/manifests/kube-scheduler.yaml
       srcConfigPath: config.yaml
       srcPolicyPath: policy.yaml
@@ -96,8 +103,8 @@ spec:
     enable: true
     image:
       name: csi-baremetal-operator
-      pullPolicy: Always
-      tag: green
+      pullPolicy: IfNotPresent
+      tag: 0.0.13-375.3c20841
     log:
       format: text
       level: info
