--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -42,8 +42,9 @@ spec:
           tag: green
         endpoint: tcp://localhost:8888
         deployConfig: false
-        amountOfLoopback: 3
-        sizeOfLoopback: 101Mi
+        config:
+          amountOfLoopback: 3
+          sizeOfLoopback: 101Mi
       image:
         name: csi-baremetal-node
         pullPolicy: Always
