--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,9 +2,9 @@ name: PR validation
 
 on:
   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 env:
   go_version: '1.16.0'
   golangci_version: '1.37.0'
