--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -15,8 +15,8 @@ spec:
     controller:
       image:
         name: csi-baremetal-controller
-        pullPolicy: IfNotPresent
-        tag: 0.0.13-375.3c20841
+        pullPolicy: Always
+        tag: green
       log:
         format: text
         level: info
@@ -24,33 +24,33 @@ spec:
         - name: csi-provisioner
           image:
             name: csi-provisioner
-            pullPolicy: IfNotPresent
+            pullPolicy: Always
             tag: v1.6.0
         - name: csi-attacher
           image:
             name: csi-attacher
-            pullPolicy: IfNotPresent
+            pullPolicy: Always
             tag: v1.0.1
         - name: csi-resizer
           image:
             name: csi-resizer
-            pullPolicy: IfNotPresent
+            pullPolicy: Always
             tag: v1.1.0
       testEnv: false
     node:
       driveMgr:
         image:
           name: csi-baremetal-loopbackmgr
-          pullPolicy: IfNotPresent
-          tag: 0.0.13-375.3c20841
+          pullPolicy: Always
+          tag: green
         endpoint: tcp://localhost:8888
         deployConfig: false
         amountOfLoopback: 3
         sizeOfLoopback: 101Mi
       image:
         name: csi-baremetal-node
-        pullPolicy: IfNotPresent
-        tag: 0.0.13-375.3c20841
+        pullPolicy: Always
+        tag: green
       log:
         format: text
         level: info
@@ -58,7 +58,7 @@ spec:
         - name: csi-node-driver-registrar
           image:
             name: csi-node-driver-registrar
-            pullPolicy: IfNotPresent
+            pullPolicy: Always
             tag: v1.0.1-gke.0
       testEnv: false
     metrics:
@@ -68,15 +68,15 @@ spec:
       name: fluent-bit
       image:
         name: fluent-bit
-        pullPolicy: IfNotPresent
+        pullPolicy: Always
         tag: shippable
     deployAlertsConfig: false
   scheduler:
     enable: true
     image:
       name: csi-baremetal-scheduler-extender
-      pullPolicy: IfNotPresent
-      tag: 0.0.13-375.3c20841
+      pullPolicy: Always
+      tag: green
     log:
       format: text
       level: info
@@ -87,8 +87,8 @@ spec:
       enable: false
       image:
         name: csi-baremetal-scheduler-patcher
-        pullPolicy: IfNotPresent
-        tag: 0.0.13-375.3c20841
+        pullPolicy: Always
+        tag: green
       manifest: /etc/kubernetes/manifests/kube-scheduler.yaml
       srcConfigPath: config.yaml
       srcPolicyPath: policy.yaml
@@ -103,8 +103,8 @@ spec:
     enable: true
     image:
       name: csi-baremetal-operator
-      pullPolicy: IfNotPresent
-      tag: 0.0.13-375.3c20841
+      pullPolicy: Always
+      tag: green
     log:
       format: text
       level: info
