add changes to the samples
Signed-off-by: Andrey Yurchenkov <andrey.yurchenkov@dell.com>

--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/version: 1.0.0
 spec:
   globalRegistry: ""
+  nodeIDAnnotation: true
   nodeSelectors:
     #key: value
   driver:
