--- a/charts/csi-baremetal-deployment/templates/storageclass/nvme-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/nvme-sc.yaml
@@ -1,11 +1,10 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-baremetal-sc-ssdlvg
+  name: {{ .Values.storageClass.name }}-nvme
 provisioner: csi-baremetal  # CSI driver name
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
 parameters:
-  storageType: SSDLVG
+  storageType: NVME
   fsType: xfs
