--- a/charts/csi-baremetal-deployment/Chart.yaml
+++ b/charts/csi-baremetal-deployment/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 appVersion: 0.0.13
 description: Bare-metal CSI Deployment
-name: csi-deployment
+name: csi-baremetal-deployment
 version: 0.0.13
