--- a/charts/csi-baremetal-deployment/templates/configmap/patcher-configmap.yaml
+++ b/charts/csi-baremetal-deployment/templates/configmap/patcher-configmap.yaml
@@ -1,25 +1,26 @@
+{{- if .Values.scheduler.patcher.enable }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: schedulerpatcher-config
+  name: {{ .Values.scheduler.patcher.config_map_name }}
 data:
-  config.yaml: |
+  {{ .Values.scheduler.patcher.source_config_path }}: |
     apiVersion: kubescheduler.config.k8s.io/v1alpha1
     kind: KubeSchedulerConfiguration
     schedulerName: default-scheduler
     algorithmSource:
       policy:
         file:
-          path: /etc/kubernetes/scheduler/policy.yaml
+          path: {{ .Values.scheduler.patcher.target_policy_path }}
     leaderElection:
       leaderElect: true
     clientConnection:
       kubeconfig: /etc/kubernetes/scheduler.conf
-  policy.yaml: |
+    {{ .Values.scheduler.patcher.source_policy_path }}: |
     apiVersion: v1
     kind: Policy
     extenders:
-      - urlPrefix: "http://127.0.0.1:8889"
+      - urlPrefix: "http://127.0.0.1:{{ .Values.port }}"
         filterVerb: filter
         prioritizeVerb: prioritize
         weight: 1
@@ -29,3 +30,4 @@ data:
         ignorable: true
         # 15 seconds
         httpTimeout: 15000000000
+  {{ end }}
