--- a/charts/csi-baremetal-deployment/templates/rbac/csibm-rbac.yaml
+++ b/charts/csi-baremetal-deployment/templates/rbac/csibm-rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: csi-operator-sa
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -23,7 +23,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: csi-operator-sa
-    namespace: default
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: csi-operator-cr
