--- a/charts/csi-baremetal-deployment/templates/rbac/scheduler-rbac.yaml
+++ b/charts/csi-baremetal-deployment/templates/rbac/scheduler-rbac.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  namespace: default
+  namespace: {{ .Release.Namespace }}
   name: csi-baremetal-extender-sa
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -36,5 +36,5 @@ roleRef:
   name: csi-baremetal-extender-cr
 subjects:
   - kind: ServiceAccount
-    namespace: default
+    namespace: {{ .Release.Namespace }}
     name: csi-baremetal-extender-sa
