--- a/charts/csi-baremetal-deployment/templates/storageclass/default-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/default-sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-baremetal-sc
+  name: {{ .Values.storageClass.name }}
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: csi-baremetal  # CSI driver name
