--- a/charts/csi-baremetal-deployment/templates/storageclass/hdd-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/hdd-sc.yaml
@@ -1,11 +1,10 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-baremetal-sc-hddlvg
+  name: {{ .Values.storageClass.name }}-hdd
 provisioner: csi-baremetal  # CSI driver name
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
-allowVolumeExpansion: true
 parameters:
-  storageType: HDDLVG
+  storageType: HDD
   fsType: xfs
