--- a/charts/csi-baremetal-deployment/templates/storageclass/hddlvg-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/hddlvg-sc.yaml
@@ -1,11 +1,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-baremetal-sc-syslvg
+  name: {{ .Values.storageClass.name }}-hddlvg
 provisioner: csi-baremetal  # CSI driver name
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: true
 parameters:
-  storageType: SYSLVG
+  storageType: HDDLVG
   fsType: xfs
