--- a/charts/csi-baremetal-deployment/templates/storageclass/ssd-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/ssd-sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-baremetal-sc-ssd
+  name: {{ .Values.storageClass.name }}-ssd
 provisioner: csi-baremetal  # CSI driver name
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
