--- a/charts/csi-baremetal-deployment/templates/storageclass/syslvg-sc.yaml
+++ b/charts/csi-baremetal-deployment/templates/storageclass/syslvg-sc.yaml
@@ -1,10 +1,11 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-baremetal-sc-nvme
+  name: {{ .Values.storageClass.name }}-syslvg
 provisioner: csi-baremetal  # CSI driver name
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
+allowVolumeExpansion: true
 parameters:
-  storageType: NVME
+  storageType: SYSLVG
   fsType: xfs
