--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -79,6 +79,18 @@ driver:
     level: info
 
   logReceiver:
+    create: false
+    #stdout/es if stdout, then fluent bit will print collected logs in stdout, if es, then the output of fluent bit is Elastic Search
+    output: stdout #es
+    # Valid values for Elasticsearch are "http" and "https"
+    # protocol: http
+
+    # Elasticsearch address
+    # host: 10.249.234.158
+
+    # Port to use for provided Elasticsearch receiver
+    # port: 9200
+
     fluentbitAgent:
       image:
         name:
