--- a/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
+++ b/charts/csi-baremetal-deployment/templates/csi-baremetal_v1_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: csi-baremetal.dell.com/v1
 kind: Deployment
 metadata:
-  name: csi
+  name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: csi-baremetal
@@ -91,7 +91,7 @@ spec:
         name: {{ .Values.scheduler.patcher.image.name | default "csi-baremetal-scheduler-patcher" }}
         pullPolicy: {{ .Values.image.pullPolicy }}
         tag: {{ .Values.scheduler.patcher.image.tag | default .Values.image.tag }}
-      manifest: {{ .Values.scheduler.patcher.enable }}
+      manifest: {{ .Values.scheduler.patcher.manifest }}
       srcConfigPath: {{ .Values.scheduler.patcher.source_config_path }}
       srcPolicyPath: {{ .Values.scheduler.patcher.source_policy_path }}
       targetConfigPath: {{ .Values.scheduler.patcher.target_config_path }}
@@ -109,5 +109,5 @@ spec:
       tag: {{ .Values.operator.image.tag | default .Values.image.tag }}
     log:
       format: {{ .Values.operator.log.format }}
-      level: {{ .Values.operator.metrics.port }}
+      level: {{ .Values.operator.log.level }}
     testEnv: {{ .Values.env.test }}
