--- a/charts/csi-baremetal-operator/values.yaml
+++ b/charts/csi-baremetal-operator/values.yaml
@@ -4,6 +4,7 @@ global:
 
 # Image pull settings
 image:
+  # TODO refactor after csi-baremetal-operator renaming https://github.com/dell/csi-baremetal/issues/341
   name: controller
   tag: latest
   pullPolicy: IfNotPresent
