--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     app.kubernetes.io/version: 1.0.0
 spec:
   globalRegistry: ""
+  globalTag: green
   nodeIDAnnotation: true
   nodeSelectors:
     #key: value
@@ -17,7 +18,6 @@ spec:
       image:
         name: csi-baremetal-controller
         pullPolicy: Always
-        tag: green
       log:
         format: text
         level: info
@@ -26,12 +26,10 @@ spec:
         image:
           name: csi-baremetal-loopbackmgr
           pullPolicy: Always
-          tag: green
         endpoint: tcp://localhost:8888
       image:
         name: csi-baremetal-node
         pullPolicy: Always
-        tag: green
       log:
         format: text
         level: info
@@ -50,7 +48,6 @@ spec:
     image:
       name: csi-baremetal-scheduler-extender
       pullPolicy: Always
-      tag: green
     log:
       format: text
       level: info
@@ -62,7 +59,6 @@ spec:
       image:
         name: csi-baremetal-scheduler-patcher
         pullPolicy: Always
-        tag: green
       manifest: /etc/kubernetes/manifests/kube-scheduler.yaml
       srcConfigPath: config.yaml
       srcPolicyPath: policy.yaml
@@ -77,7 +73,6 @@ spec:
     image:
       name: csi-baremetal-operator
       pullPolicy: Always
-      tag: green
     log:
       format: text
       level: info
