--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -66,6 +66,10 @@ driver:
     image:
       tag: v1.0.1-gke.0
 
+  livenessProbe:
+    image:
+      tag: v2.1.0
+
   # Metrics endpoint
   metrics:
     path: /metrics
