--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -45,6 +45,8 @@ driver:
       server:
         endpoint: tcp://localhost:8888
     deployConfig: false
+    amountOfLoopDevices: 3
+    sizeOfLoopDevices: 101Mi
 
   # Sidecars parameters
   provisioner:
