--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -9,7 +9,6 @@ metadata:
     app.kubernetes.io/version: 1.0.0
 spec:
   globalRegistry: ""
-  globalTag: green
   nodeIDAnnotation: true
   nodeSelectors:
     #key: value
@@ -18,6 +17,7 @@ spec:
       image:
         name: csi-baremetal-controller
         pullPolicy: Always
+        tag: green
       log:
         format: text
         level: info
@@ -26,10 +26,12 @@ spec:
         image:
           name: csi-baremetal-loopbackmgr
           pullPolicy: Always
+          tag: green
         endpoint: tcp://localhost:8888
       image:
         name: csi-baremetal-node
         pullPolicy: Always
+        tag: green
       log:
         format: text
         level: info
@@ -48,6 +50,7 @@ spec:
     image:
       name: csi-baremetal-scheduler-extender
       pullPolicy: Always
+      tag: green
     log:
       format: text
       level: info
@@ -59,6 +62,7 @@ spec:
       image:
         name: csi-baremetal-scheduler-patcher
         pullPolicy: Always
+        tag: green
       manifest: /etc/kubernetes/manifests/kube-scheduler.yaml
       srcConfigPath: config.yaml
       srcPolicyPath: policy.yaml
@@ -73,6 +77,7 @@ spec:
     image:
       name: csi-baremetal-operator
       pullPolicy: Always
+      tag: green
     log:
       format: text
       level: info
