--- a/charts/csi-baremetal-deployment/templates/rbac/csibm-rbac.yaml
+++ b/charts/csi-baremetal-deployment/templates/rbac/csibm-rbac.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: csi-operator-sa
+  name: csi-node-controller-sa
   namespace: {{ .Release.Namespace }}
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-operator-cr
+  name: csi-node-controller-cr
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
@@ -19,12 +19,12 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: csi-operator-rb
+  name: csi-node-controller-rb
 subjects:
   - kind: ServiceAccount
-    name: csi-operator-sa
+    name: csi-node-controller-sa
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: csi-operator-cr
+  name: csi-node-controller-cr
   apiGroup: rbac.authorization.k8s.io
