--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -22,6 +22,7 @@ feature:
   nodeIDAnnotation:
 
 # to deploy on specific nodes kubeclt get nodes -l <key>=<value>
+# more then one key-value pair is not supported
 nodeSelector:
   key:
   value:
