Add short names
Signed-off-by: shemya <anastasia.shemyakins@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -12,6 +12,9 @@ spec:
     kind: Deployment
     listKind: DeploymentList
     plural: deployments
+    shortNames:
+      - csi
+      - csis
     singular: deployment
   scope: Cluster
   version: v1
