--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: csi-baremetal-operator
     app.kubernetes.io/version: 1.0.0
 spec:
+  platform: ""
   globalRegistry: ""
   nodeIDAnnotation: true
   nodeSelectors:
