last fix after tests
Signed-off-by: Andrey Yurchenkov <andrey.yurchenkov@dell.com>

--- a/config/samples/csi-baremetal_v1_deployment.yaml
+++ b/config/samples/csi-baremetal_v1_deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/managed-by: csi-baremetal-operator
     app.kubernetes.io/version: 1.0.0
 spec:
-  platform: ""
+  platform: "openshift"
   globalRegistry: ""
   nodeIDAnnotation: true
   nodeSelectors:
