change CR scope
Signed-off-by: safronovD <danil_safronov@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -16,7 +16,7 @@ spec:
       - csi
       - csis
     singular: deployment
-  scope: Cluster
+  scope: Namespaced
   version: v1
   versions:
     - name: v1
