--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacityreservations.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_availablecapacityreservations.yaml
@@ -8,6 +8,15 @@ metadata:
   creationTimestamp: null
   name: availablecapacityreservations.csi-baremetal.dell.com
 spec:
+  additionalPrinterColumns:
+  - JSONPath: .spec.Namespace
+    description: Pod namespace
+    name: NAMESPACE
+    type: string
+  - JSONPath: .spec.Status
+    description: Status of AvailableCapacityReservation
+    name: STATUS
+    type: string
   group: csi-baremetal.dell.com
   names:
     kind: AvailableCapacityReservation
@@ -18,6 +27,7 @@ spec:
     - acrs
     singular: availablecapacityreservation
   scope: Cluster
+  subresources: {}
   validation:
     openAPIV3Schema:
       description: AvailableCapacityReservation is the Schema for the availablecapacitiereservations
@@ -37,16 +47,43 @@ spec:
           type: object
         spec:
           properties:
-            Name:
+            Namespace:
               type: string
-            Reservations:
+            NodeRequests:
+              properties:
+                Requested:
+                  description: requested - filled by scheduler/extender
+                  items:
+                    type: string
+                  type: array
+                Reserved:
+                  description: reserved - filled by csi driver controller
+                  items:
+                    type: string
+                  type: array
+              type: object
+            ReservationRequests:
               items:
-                type: string
+                properties:
+                  CapacityRequest:
+                    description: request per volume filled by scheduler/extender
+                    properties:
+                      Name:
+                        type: string
+                      Size:
+                        format: int64
+                        type: integer
+                      StorageClass:
+                        type: string
+                    type: object
+                  Reservations:
+                    description: reservation filled by csi driver controller
+                    items:
+                      type: string
+                    type: array
+                type: object
               type: array
-            Size:
-              format: int64
-              type: integer
-            StorageClass:
+            Status:
               type: string
           type: object
       type: object
@@ -55,19 +92,6 @@ spec:
   - name: v1
     served: true
     storage: true
-  additionalPrinterColumns:
-    - name: STORAGE CLASS
-      type: string
-      description: StorageClass of AvailableCapacityReservation
-      JSONPath: .spec.StorageClass
-    - name: SIZE
-      type: string
-      description: Size of AvailableCapacityReservation
-      JSONPath: .spec.Size
-    - name: RESERVATIONS
-      type: string
-      description: List of reserved AvailableCapacity
-      JSONPath: .spec.Reservations
 status:
   acceptedNames:
     kind: ""
