[Issue-372] add versions variable to makefile
Signed-off-by: Yurkov Anton <anton.yurkov@dell.com>

--- a/charts/csi-baremetal-operator/values.yaml
+++ b/charts/csi-baremetal-operator/values.yaml
@@ -4,7 +4,6 @@ global:
 
 # Image pull settings
 image:
-  # TODO refactor after csi-baremetal-operator renaming https://github.com/dell/csi-baremetal/issues/341
-  name: controller
+  name: csi-baremetal-operator
   tag: latest
   pullPolicy: IfNotPresent
