--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         control-plane: controller-manager
+        release: {{ .Release.Name }}
     spec:
       containers:
       - command:
@@ -30,4 +31,11 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+        volumeMounts:
+        - mountPath: /crash-dump
+          name: crash-dump 
       terminationGracePeriodSeconds: 10
+      volumes:  
+      - name: crash-dump
+        emptyDir: {}
+
