add last comment
Signed-off-by: Andrey Yurchenkov <andrey.yurchenkov@dell.com>

--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -14,6 +14,7 @@ spec:
     metadata:
       labels:
         control-plane: controller-manager
+        # release label used by fluentbit to make "release" folder
         release: {{ .Release.Name }}
     spec:
       containers:
