--- a/charts/csi-baremetal-operator/templates/manager.yaml
+++ b/charts/csi-baremetal-operator/templates/manager.yaml
@@ -20,7 +20,7 @@ spec:
         - /manager
         args:
         - --enable-leader-election
-        image: {{ .Values.image.name }}:{{ .Values.image.tag }}
+        image: {{ .Values.global.registry }}/{{ .Values.image.name }}:{{ .Values.image.tag }}
         name: manager
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         resources:
