--- a/charts/csi-baremetal-operator/templates/rbac.yaml
+++ b/charts/csi-baremetal-operator/templates/rbac.yaml
@@ -157,7 +157,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: csi-baremetal-roxy-role
+  name: csi-baremetal-proxy-role
 subjects:
 - kind: ServiceAccount
   name: default
