--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -124,15 +124,7 @@ scheduler:
     image:
       tag:
 
-    manifest: /etc/kubernetes/manifests/kube-scheduler.yaml
-    source_config_path: config.yaml
-    source_config_19_path: config-19.yaml
-    source_policy_path: policy.yaml
-    target_config_path: /etc/kubernetes/scheduler/config.yaml
-    target_config_19_path: /etc/kubernetes/scheduler/config-19.yaml
-    target_policy_path: /etc/kubernetes/scheduler/policy.yaml
     kubeconfig: /etc/kubernetes/scheduler.conf
-    backup_path: /etc/kubernetes/scheduler
     interval: 60
     restore_on_shutdown: true
     config_map_name: schedulerpatcher-config
@@ -159,4 +151,4 @@ nodeController:
     path: /metrics
     port: 8787
 
-platform: ""
+platform: "vanilla"
