--- a/charts/csi-baremetal-deployment/templates/configmap/patcher-configmap.yaml
+++ b/charts/csi-baremetal-deployment/templates/configmap/patcher-configmap.yaml
@@ -24,7 +24,7 @@ data:
     apiVersion: v1
     kind: Policy
     extenders:
-      - urlPrefix: {{ .Values.scheduler.patcher.url_prefix | quote }}
+      - urlPrefix: "http://127.0.0.1:{{ .Values.scheduler.patcher.extender_port }}"
         filterVerb: filter
         prioritizeVerb: prioritize
         weight: 1
@@ -38,7 +38,7 @@ data:
     apiVersion: kubescheduler.config.k8s.io/v1beta1
     kind: KubeSchedulerConfiguration
     extenders:
-      - urlPrefix: {{ .Values.scheduler.patcher.url_prefix | quote }}
+      - urlPrefix: "http://127.0.0.1:{{ .Values.scheduler.patcher.extender_port }}"
         filterVerb: filter
         prioritizeVerb: prioritize
         weight: 1
